Fixes issues with header being covered and forced height of continents list on load.

--- a/src/packages/modules/country-region-selection-z10/css/_responsive-country-region-selection.scss
+++ b/src/packages/modules/country-region-selection-z10/css/_responsive-country-region-selection.scss
@@ -50,7 +50,6 @@ $phoneMax: px-em(767);
       background-color: transparent;
     }
     .scrollable {
-      position: absolute;
       top: 0;
       left: 0;
       right: 0;
